--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-   <link rel="icon" href="../sayfalar/img/favicon.png" type="image/png">
+    <link rel="icon" href="../sayfalar/img/favicon.png" type="image/png">
     <title>Star Wars Akademisi</title>
-   
+
 
 </head>
 
 <body>
-
 
     <nav>
         <a href="index.html">Ana Sayfa</a>
@@ -24,36 +23,40 @@
         <a href="sayfalar/test.html">Test</a>
     </nav>
 
-<h1 class="star-wars-title">Star Wars Filmleri</h1>
-<p>Filmlerden birine tıklayarak detaylarını görebilirsin.</p>
+
+    <h1 class="star-wars-title">Star Wars Filmleri</h1>
+    <p>Filmlerden birine tıklayarak detaylarını görebilirsin.</p>
 
     <img src="sayfalar/img/starwarsimaginemap.jpg" alt="Star Wars Imagine Map" usemap="#starwarsfilms" width="400"
         height="500">
 
-        <map name="starwarsfilms">
-            <area shape="rect" coords="0,0,130,165" href="../sayfalar/phantom_menace.html" alt="The Phantom Menace">
-            <area shape="rect" coords="132,0,265,165" href="../sayfalar/attack_of_the_clones.html" alt="Attack of the Clones">
-            <area shape="rect" coords="266,0,395,164" href="../sayfalar/revenge_of_the_sith.html" alt="Revenge of the Sith">
-            <area shape="rect" coords="0,168,132,332" href="../sayfalar/a_new_hope.html" alt="A New Hope">
-            <area shape="rect" coords="162,138,264,332" href="../sayfalar/empire_strikes_back.html" alt="The Empire Strikes Back">
-            <area shape="rect" coords="265,166,395,332" href="../sayfalar/return_of_the_jedi.html" alt="Return of the Jedi">
-            <area shape="rect" coords="0,333,132,499" href="../sayfalar/force_awakens.html" alt="The Force Awakens">
-            <area shape="rect" coords="133,333,265,499" href="../sayfalar/last_jedi.html" alt="The Last Jedi">
-            <area shape="rect" coords="266,332,399,499" href="../sayfalar/rise_of_skywalker.html" alt="The Rise of Skywalker">
-        </map>
-        
+    <map name="starwarsfilms">
+        <area shape="rect" coords="0,0,130,165" href="../sayfalar/phantom_menace.html" alt="The Phantom Menace">
+        <area shape="rect" coords="132,0,265,165" href="../sayfalar/attack_of_the_clones.html"
+            alt="Attack of the Clones">
+        <area shape="rect" coords="266,0,395,164" href="../sayfalar/revenge_of_the_sith.html" alt="Revenge of the Sith">
+        <area shape="rect" coords="0,168,132,332" href="../sayfalar/a_new_hope.html" alt="A New Hope">
+        <area shape="rect" coords="162,138,264,332" href="../sayfalar/empire_strikes_back.html"
+            alt="The Empire Strikes Back">
+        <area shape="rect" coords="265,166,395,332" href="../sayfalar/return_of_the_jedi.html" alt="Return of the Jedi">
+        <area shape="rect" coords="0,333,132,499" href="../sayfalar/force_awakens.html" alt="The Force Awakens">
+        <area shape="rect" coords="133,333,265,499" href="../sayfalar/last_jedi.html" alt="The Last Jedi">
+        <area shape="rect" coords="266,332,399,499" href="../sayfalar/rise_of_skywalker.html"
+            alt="The Rise of Skywalker">
+    </map>
 
-   <div class="trilogy-box">
-    <h3>Star Wars Trilogy</h3>
-    <p>İlgili başlığa gitmek için tıklayabilirsin.</p>
-    <div class="go-to-section">
-        <ul>
-            <li><a href="#orijinal">Orijinal Üçleme</a></li>
-            <li><a href="#prequel">Prequel Üçleme</a></li>
-            <li><a href="#sequel">Sequel Üçleme</a></li>
-        </ul>
+
+    <div class="trilogy-box">
+        <h3>Star Wars Trilogy</h3>
+        <p>İlgili başlığa gitmek için tıklayabilirsin.</p>
+        <div class="go-to-section">
+            <ul>
+                <li><a href="#orijinal">Orijinal Üçleme</a></li>
+                <li><a href="#prequel">Prequel Üçleme</a></li>
+                <li><a href="#sequel">Sequel Üçleme</a></li>
+            </ul>
+        </div>
     </div>
-</div>
 
     <div class="trilogy-box">
         <h3 id="orijinal" style="color: #FFD700;">Orijinal Üçleme (1977–1983)</h3>
@@ -187,20 +190,20 @@
 
     </div>
     <div class="film-details">
-    <h2>Film Detayları</h2>
-    <ul>
-        <li><a href="sayfalar/filmler.html">Filmler</a></li>
-    </ul>
-</div>
+        <h2>Film Detayları</h2>
+        <ul>
+            <li><a href="sayfalar/filmler.html">Filmler</a></li>
+        </ul>
+    </div>
 
-<div class="join-universe">
-    <h2>Evrende Yerini Al!</h2>
-    <p>Güç seninle olsun! Star Wars evrenine katılmak için hemen üye ol.</p>
+    <div class="join-universe">
+        <h2>Evrende Yerini Al!</h2>
+        <p>Güç seninle olsun! Star Wars evrenine katılmak için hemen üye ol.</p>
 
-    <a href="sayfalar/form.html">
-        <button class="join-button">Üye Ol</button>
-    </a>
-</div>
+        <a href="sayfalar/form.html">
+            <button class="join-button">Üye Ol</button>
+        </a>
+    </div>
 
 
     <footer class="galactic-footer">
