--- a/sayfalar/a_new_hope.html
+++ b/sayfalar/a_new_hope.html
@@ -10,14 +10,15 @@
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">Ana Sayfa</a>
-        <a href="../sayfalar/filmler.html">Filmler</a>
-        <a href="../sayfalar/hakkimizda.html">Hakkımızda</a>
-        <a href="../sayfalar/sss.html">SSS</a>
-        <a href="../sayfalar/form.html">Üye Ol</a>
-        <a href="../sayfalar/test.html">Test</a>
-    </nav>
+ <nav>
+  <a href="../index.html">Ana Sayfa</a>
+  <a href="filmler.html">Filmler</a>
+  <a href="hakkimizda.html">Hakkımızda</a>
+  <a href="sss.html">SSS</a>
+  <a href="form.html">Üye Ol</a>
+  <a href="test.html">Test</a>
+</nav>
+
 
     <main class="film-detay">
         <h1>A New Hope (1977)</h1>
