--- a/sayfalar/kayit_onay.html
+++ b/sayfalar/kayit_onay.html
@@ -13,13 +13,13 @@
 
 <body>
  
-     <nav>
-        <a href="/index.html">Ana Sayfa</a>
-        <a href="/sayfalar/filmler.html">Filmler</a>
-        <a href="/sayfalar/hakkimizda.html">Hakkımızda</a>
-        <a href="/sayfalar/sss.html">SSS</a>
-        <a href="/sayfalar/form.html">Üye Ol</a>
-        <a href="/sayfalar/test.html">Test</a>
+      <nav>
+        <a href="index.html">Ana Sayfa</a>
+        <a href="sayfalar/filmler.html">Filmler</a>
+        <a href="sayfalar/hakkimizda.html">Hakkımızda</a>
+        <a href="sayfalar/sss.html">SSS</a>
+        <a href="sayfalar/form.html">Üye Ol</a>
+        <a href="sayfalar/test.html">Test</a>
     </nav>
 
 
