--- a/sayfalar/hakkimizda.html
+++ b/sayfalar/hakkimizda.html
@@ -10,14 +10,17 @@
 </head>
 
 <body style="background-color: black; color: white; text-align: center; font-family: Arial, sans-serif;">
-   <nav>
-        <a href="/index.html">Ana Sayfa</a>
-        <a href="/sayfalar/filmler.html">Filmler</a>
-        <a href="/sayfalar/hakkimizda.html">Hakkımızda</a>
-        <a href="/sayfalar/sss.html">SSS</a>
-        <a href="/sayfalar/form.html">Üye Ol</a>
-        <a href="/sayfalar/test.html">Test</a>
-    </nav>
+    
+     <nav>
+  <a href="../index.html">Ana Sayfa</a>
+  <a href="filmler.html">Filmler</a>
+  <a href="hakkimizda.html">Hakkımızda</a>
+  <a href="sss.html">SSS</a>
+  <a href="form.html">Üye Ol</a>
+  <a href="test.html">Test</a>
+</nav>
+
+
 <main class="about-content">
         <h2 class="about-title">Hakkımızda</h2>
         <p class="about-text">Star Wars Akademisi; Star Wars hayranları için içerik üretilen bir web sayfasıdır.</p>
