--- a/sayfalar/rise_of_skywalker.html
+++ b/sayfalar/rise_of_skywalker.html
@@ -10,14 +10,14 @@
 </head>
 
 <body style="background-color: black; color: white; text-align: center;">
-    <nav>
-        <a href="../index.html">Ana Sayfa</a>
-        <a href="../sayfalar/filmler.html">Filmler</a>
-        <a href="../sayfalar/hakkimizda.html">Hakkımızda</a>
-        <a href="../sayfalar/sss.html">SSS</a>
-        <a href="../sayfalar/form.html">Üye Ol</a>
-        <a href="../sayfalar/test.html">Test</a>
-    </nav>
+  <nav>
+  <a href="../index.html">Ana Sayfa</a>
+  <a href="filmler.html">Filmler</a>
+  <a href="hakkimizda.html">Hakkımızda</a>
+  <a href="sss.html">SSS</a>
+  <a href="form.html">Üye Ol</a>
+  <a href="test.html">Test</a>
+</nav>
 
     <div class="film-detay">
         <h1>The Rise Of Skywalker (2019)</h1>
