--- a/sayfalar/test.html
+++ b/sayfalar/test.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <nav>
-        <a href="/index.html">Ana Sayfa</a>
-        <a href="/sayfalar/filmler.html">Filmler</a>
-        <a href="/sayfalar/hakkimizda.html">Hakkımızda</a>
-        <a href="/sayfalar/sss.html">SSS</a>
-        <a href="/sayfalar/form.html">Üye Ol</a>
-        <a href="/sayfalar/test.html">Test</a>
-    </nav>
+  <a href="../index.html">Ana Sayfa</a>
+  <a href="filmler.html">Filmler</a>
+  <a href="hakkimizda.html">Hakkımızda</a>
+  <a href="sss.html">SSS</a>
+  <a href="form.html">Üye Ol</a>
+  <a href="test.html">Test</a>
+</nav>
+
   <header>
     <h1>Hangi Star Wars Karakterisin?</h1>
   </header>
