--- a/sayfalar/sss.html
+++ b/sayfalar/sss.html
@@ -4,27 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
+
     <link rel="icon" href="../sayfalar/img/favicon.png" type="image/png">
     <title>Sık Sorulan Sorular - Star Wars Dünyası</title>
 </head>
 
 <body class="faq-page">
-<nav>
-  <a href="../index.html">Ana Sayfa</a>
-  <a href="filmler.html">Filmler</a>
-  <a href="hakkimizda.html">Hakkımızda</a>
-  <a href="sss.html">SSS</a>
-  <a href="form.html">Üye Ol</a>
-  <a href="test.html">Test</a>
-</nav>
+
+    <nav>
+        <a href="../index.html">Ana Sayfa</a>
+        <a href="filmler.html">Filmler</a>
+        <a href="hakkimizda.html">Hakkımızda</a>
+        <a href="sss.html">SSS</a>
+        <a href="form.html">Üye Ol</a>
+        <a href="test.html">Test</a>
+    </nav>
+
 
     <main class="faq-content">
         <h1 class="faq-title">Sık Sorulan Sorular (SSS)</h1>
 
         <section class="faq-question">
             <h2>1. Star Wars hangi sırayla izlenmeli?</h2>
-            <p>Star Wars filmlerini çıkış sırasına veya kronolojik sıraya göre izleyebilirsiniz. Önerilen izleme sıraları:</p>
+            <p>Star Wars filmlerini çıkış sırasına veya kronolojik sıraya göre izleyebilirsiniz. Önerilen izleme
+                sıraları:</p>
             <ul>
                 <li><b>Çıkış Sırasına Göre:</b> 4-5-6-1-2-3-7-8-9</li>
                 <li><b>Kronolojik Sıraya Göre:</b> 1-2-3-4-5-6-7-8-9</li>
@@ -33,7 +37,8 @@
 
         <section class="faq-question">
             <h2>2. Jedi ve Sith arasındaki fark nedir?</h2>
-            <p>Jedi, Güç'ün aydınlık tarafını temsil eden barışçıl savaşçılardır. Sithler nefret, öfke, hırs gibi duygularla yaşarlar ve her ne pahasına olursa olsun güce ulaşmak isterler.</p>
+            <p>Jedi, Güç'ün aydınlık tarafını temsil eden barışçıl savaşçılardır. Sithler nefret, öfke, hırs gibi
+                duygularla yaşarlar ve her ne pahasına olursa olsun güce ulaşmak isterler.</p>
         </section>
 
         <section class="faq-question">
