--- a/index.html
+++ b/index.html
@@ -31,18 +31,16 @@
         height="500">
 
     <map name="starwarsfilms">
-        <area shape="rect" coords="0,0,130,165" href="../sayfalar/phantom_menace.html" alt="The Phantom Menace">
-        <area shape="rect" coords="132,0,265,165" href="../sayfalar/attack_of_the_clones.html"
-            alt="Attack of the Clones">
-        <area shape="rect" coords="266,0,395,164" href="../sayfalar/revenge_of_the_sith.html" alt="Revenge of the Sith">
-        <area shape="rect" coords="0,168,132,332" href="../sayfalar/a_new_hope.html" alt="A New Hope">
-        <area shape="rect" coords="162,138,264,332" href="../sayfalar/empire_strikes_back.html"
+        <area shape="rect" coords="0,0,130,165" href="sayfalar/phantom_menace.html" alt="The Phantom Menace">
+        <area shape="rect" coords="132,0,265,165" href="sayfalar/attack_of_the_clones.html" alt="Attack of the Clones">
+        <area shape="rect" coords="266,0,395,164" href="sayfalar/revenge_of_the_sith.html" alt="Revenge of the Sith">
+        <area shape="rect" coords="0,168,132,332" href="sayfalar/a_new_hope.html" alt="A New Hope">
+        <area shape="rect" coords="162,138,264,332" href="sayfalar/empire_strikes_back.html"
             alt="The Empire Strikes Back">
-        <area shape="rect" coords="265,166,395,332" href="../sayfalar/return_of_the_jedi.html" alt="Return of the Jedi">
-        <area shape="rect" coords="0,333,132,499" href="../sayfalar/force_awakens.html" alt="The Force Awakens">
-        <area shape="rect" coords="133,333,265,499" href="../sayfalar/last_jedi.html" alt="The Last Jedi">
-        <area shape="rect" coords="266,332,399,499" href="../sayfalar/rise_of_skywalker.html"
-            alt="The Rise of Skywalker">
+        <area shape="rect" coords="265,166,395,332" href="sayfalar/return_of_the_jedi.html" alt="Return of the Jedi">
+        <area shape="rect" coords="0,333,132,499" href="sayfalar/force_awakens.html" alt="The Force Awakens">
+        <area shape="rect" coords="133,333,265,499" href="sayfalar/last_jedi.html" alt="The Last Jedi">
+        <area shape="rect" coords="266,332,399,499" href="sayfalar/rise_of_skywalker.html" alt="The Rise of Skywalker">
     </map>
 
 
